repair z-index login

--- a/styles/form-login.css
+++ b/styles/form-login.css
@@ -7,7 +7,6 @@
   height: 100vh;
   opacity: 0;
   transition: all 0.5s ease-out;
-  z-index: 1000;
 }
 
 .login.show {
